--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -11,7 +11,9 @@
 <input type="hidden" id="txtSellerId" style="margine-right:5px"/>
 <input type="text" id="txtName" style="margine-right:5px" placeholder="Name"/>
 <input type="text" id="txtEmail" style="margine-right:5px" placeholder="Email"/>
+<input type="text" id="txtFax" style="margine-right:5px" placeholder="Fax" />
 <input type="text" id="txtAge" style="margine-right:5px" placeholder="Age"/>
+<input type="text" id="txtPhone" style="margine-right:5px" placeholder="Phone No" />
 
 <button id="btnSaveSeller" class="btn btn-primary"> Add New Sellers </button>
 
@@ -24,7 +26,9 @@
             <th> Seller ID </th>
             <th> SellerName </th>
             <th> Email </th>
+            <th> Fax NO </th>
             <th> Age </th>
+            <th> Phone No </th>
             <th> Edit/Delete </th>
         </tr>
     </thead>
@@ -50,7 +54,9 @@
             SellerId: $(txtSellerId).val(),
             Name: $(txtName).val(),
             Email: $(txtEmail).val(),
+            Fax: $(txtFax).val(),
             Age: $(txtAge).val(),
+            Phone: $(txtPhone).val(),
         };
         $.post("Sellers/SaveOrUpdate", Seller, function () {
             $(txtSellerId).val(0);
@@ -72,7 +78,9 @@
                             <td>`+ seller.sellerId+`</td>
                             <td>`+ seller.name +`</td>
                             <td>`+ seller.email +`</td>
-                            <td>`+ seller.age+`</td>
+                            <td>`+ seller.fax +`</td>
+                            <td>`+ seller.age +`</td>
+                            <td>`+ seller.phone +`</td>
                             <td>
                                 <button class="btn btn-primary" onclick="Edit(`+ seller.sellerId+`)">Edit</button>
                                 <button class="btn btn-primary" onclick="Delete(`+ seller.sellerId+`)">Delete</button>
@@ -88,7 +96,9 @@
         $("#txtSellerId").val(seller.sellerId);
         $("#txtName").val(seller.name);
         $("#txtEmail").val(seller.email);
+        $("#txtFax").val(seller.fax);
         $("#txtAge").val(seller.age);
+        $("#txtPhone").val(seller.phone);
     }
 
     function Delete(sellerId) {
@@ -101,7 +111,9 @@
         $("#txtSellerId").val(0);
         $("#txtName").val(" ");
         $("#txtEmail").val();
+        $("#txtFax").val();
         $("#txtAge").val(0);
+        $("#txtPhone").val(0);
     }
 
 
